refactor: 重构 CLI 工具以支持多编辑器规则管理
重构 CLI 工具，支持 Trae、Cursor 和 Windsurf 编辑器的规则管理。更新了 `package.json` 和 `README.md` 以反映新的功能，并删除了旧的 `index.js` 文件，改为使用 TypeScript 实现。新增了规则文件的路径处理逻辑，并优化了用户交互流程。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "llm-rules-cli",
   "version": "0.0.1",
-  "description": "CLI tool to fetch and save Cursor rules from cursor.directory",
+  "description": "命令行工具，用于下载并安装规则到本地编辑器中。",
   "type": "module",
   "bin": {
     "llm-rules": "index.js"
@@ -14,10 +14,14 @@
   },
   "keywords": [
     "cursor",
-    "cursor-editor",
+    "cursor-directory",
+    "rules",
     "cli",
-    "cursor-rules",
-    "cursor-directory"
+    "trae",
+    "windsurf",
+    "automation",
+    "install",
+    "download"
   ],
   "license": "MIT",
   "dependencies": {
