chore: 更新项目名称和二进制文件名称
将项目名称从 "llm-rules-cli" 更改为 "create-rules"，并同步更新二进制文件名称以保持一致

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "llm-rules-cli",
+  "name": "create-rules",
   "version": "0.0.1",
   "description": "命令行工具，用于下载并安装规则到本地编辑器中。",
   "type": "module",
   "bin": {
-    "llm-rules": "index.js"
+    "create-rules": "index.js"
   },
   "scripts": {
     "dev": "unbuild --stub",
