refactor: 将项目名称和命令从"create-rules"更改为"create-rule"
为了保持命名一致性，将项目名称和命令从"create-rules"更改为"create-rule"。这有助于避免混淆并提高代码的可读性。

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "create-rules",
+  "name": "create-rule",
   "version": "0.0.1",
   "description": "命令行工具，用于下载并安装规则到本地编辑器中。",
   "type": "module",
   "bin": {
-    "create-rules": "index.js"
+    "create-rule": "index.js"
   },
   "scripts": {
     "dev": "unbuild --stub",
