docs: 更新README和package.json中的仓库链接和元数据
在README和README.zh.md中添加了GitHub仓库地址和语言版本链接，并在package.json中补充了repository、bugs和homepage字段，以便更好地引导用户访问项目资源

--- a/package.json
+++ b/package.json
@@ -40,5 +40,13 @@
   },
   "peerDependencies": {
     "typescript": "^5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ake77-code/create-rule.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ake77-code/create-rule/issues"
+  },
+  "homepage": "https://github.com/ake77-code/create-rule#readme"
 }
