docs: 更新README和package.json的描述
更新README.md中的链接文本，使其更简洁。将package.json中的描述从中文改为英文，并更新版本号至0.0.5，以便更好地适应国际化需求。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-rule",
-  "version": "0.0.4",
-  "description": "命令行工具，用于下载并安装规则到本地编辑器中。",
+  "version": "0.0.5",
+  "description": "A command-line tool for downloading and installing rules into the local editor.",
   "type": "module",
   "bin": {
     "create-rule": "index.js"
